--- a/nbs/denoise.ipynb
+++ b/nbs/denoise.ipynb
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13e6ab6f",
+   "id": "74e658a0",
    "metadata": {},
    "outputs": [
     {
@@ -291,8 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e5ae0efe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = get_dd_model((8, 8, K), mask, K, optimizer=tf.optimizers.Adam())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b3cfe7",
    "metadata": {},
    "outputs": [],
    "source": []
